[package]
authors = ["Tim Cheeseman <tim@timcheeseman.com>"]
categories = ["games"]
description = "GNU Internet Backgammon Server"
homepage = "https://cirla.github.io/gibs"
keywords = ["backgammon", "gnubg"]
license = "AGPL-3.0"
name = "gibs"
repository = "https://github.com/cirla/gibs"
version = "0.1.0"
[badges.appveyor]
repository = "cirla/gibs"

[badges.travis-ci]
repository = "cirla/gibs"

[dependencies]
actix = "0.7.1"
actix-web = "0.7.1"
argon2rs = "0.2.5"
chrono = "0.4.4"
clap = "2.32.0"
config = "0.9.0"
env_logger = "0.5.11"
futures = "0.1.23"
jsonwebtoken = "4.0.1"
log = "0.4.3"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"

[dependencies.diesel]
features = ["chrono", "postgres"]
version = "1.3.2"
